--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    block stylesheets
+      link(rel='stylesheet', href='/stylesheets/style.css')
   body
+   div(ng-app="chat-app", ng-cloak)
     block content
+
+
+    block javascripts
+      scripts(src="/angular/angular.min.js")
+      scripts(src="/javascripts/main.js")
